# docs/swagger.yaml
@@ -55,24 +55,10 @@ paths:
             items:
               $ref: '#/definitions/internal_customer.ResponseCustomer'
             type: array
-        "400":
-          description: JSON inválido o malformado
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "409":
-          description: El email ya está registrado
-          schema:
-            additionalProperties:
-              type: string
-            type: object
         "500":
           description: Error interno del servidor
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/customer-api_internal_shared.ErrorResponse'
       summary: Obtener clientes
       tags:
       - Customers
